feat: issuer API for registering oauth clients
